chore: add dependencies for data analysis libraries

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "kagglehub>=0.3.12",
+    "matplotlib>=3.10.3",
+    "pandas>=2.3.1",
+    "seaborn>=0.13.2",
+]
