chore: update dependencies for loguru, mlxtend, and networkx

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "kagglehub>=0.3.12",
+    "loguru>=0.7.3",
     "matplotlib>=3.10.3",
+    "mlxtend>=0.23.4",
+    "networkx>=3.5",
     "pandas>=2.3.1",
     "seaborn>=0.13.2",
 ]
